--- a/website/lectures/lecture08.qmd
+++ b/website/lectures/lecture08.qmd
@@ -1,5 +1,5 @@
 ---
-title: "WAR II: Defensive Credit & Defining Replacement-Level"
+title: "Lecture 8: Defensive creidt & replacement level"
 format: html
 execute: 
   cache: true
