--- a/website/lectures/stat479_refs.bib
+++ b/website/lectures/stat479_refs.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Sameer Deshpande at 2025-07-16 10:13:17 -0500 
+%% Created for Sameer Deshpande at 2025-07-24 11:54:13 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Lindley_decision,
+	author = {Dennis Lindley},
+	date-added = {2025-07-24 11:53:48 -0500},
+	date-modified = {2025-07-24 11:54:13 -0500},
+	publisher = {Wiley},
+	title = {Making decisions},
+	year = {1985}}
 
 @article{Wickham2011_split_apply_combine,
 	author = {Hadley Wickham},
@@ -18,4 +26,5 @@
 	pages = {1--29},
 	title = {The split-apply-combine strategy for data analysis},
 	volume = {40},
-	year = {2011}}
+	year = {2011},
+	bdsk-url-1 = {https://doi.org/10.18637/jss.v040.i01}}
