--- a/website/lectures/lecture01.qmd
+++ b/website/lectures/lecture01.qmd
@@ -70,7 +70,7 @@ Additionally, the column `did_not_play` contains a Boolean (i.e., logical) varia
 
 ```{r reg}
 allstar_dates <-
-  date(c("2002-02-10", "2003-02-09", "2004-02-15",
+  lubridate::date(c("2002-02-10", "2003-02-09", "2004-02-15",
     "2005-02-20", "2006-02-19", "2007-02-18", 
     "2008-02-17", "2009-02-15", "2010-02-14",
     "2011-02-20", "2012-02-26", "2013-02-17", 
@@ -265,7 +265,80 @@ season_box %>%
   select(Player, season, TSP, eFGP, FGP, TPP, n_games)
 ```
 
-## Recap and a look ahead
+## Properties of a good metric
+
+We've now computed several metrics (FGM, FGP, eFGP, and TSP) that all attempt to quantify an NBA player's shooting ability.
+
+<!--
+  What is the purpose a metric in sports analytics? 
+  Some are purely there to describe what happened
+  
+  Others are there to inform what might happen in the future; i.e., what component represents "skill"
+  
+  Both types of metrics are important
+  
+  Later we will explore much more formal ways to account for this. 
+  
+  But in the context of shooting performance, we can at least how repeatable certain values are year-to-year
+  
+  We find that, among players who attempted at last 400 field goals and at least 100 three point shots, the correlations are pretty consistent. So, these metrics are fairly stable.
+  
+  Interestingly, TPP is the least
+-->
+```{r qualified}
+qual_box <-
+  season_box |>
+  filter(FGA >= 400 & TPA >= 100)
+```
+
+
+```{r next_TS}
+lag_tsp <- 
+  qual_box |>
+  select(Player, season, TSP) |>
+  group_by(Player) |>
+  arrange(season) |>
+  mutate(nextTSP = lead(TSP)) |>
+  ungroup() |>
+  arrange(Player, season)
+```
+
+```{r plot_tsp}
+#| fig-align: center
+#| fig-width: 6.5
+#| fig-height: 6.5
+par(mar = c(3,3,2,1), mgp = c(1.8, 0.5, 0))
+plot(lag_tsp$TSP, lag_tsp$nextTSP,
+     xlab = "TSP (season n)", ylab = "TSP (season n+1)",
+     xlim = range(c(lag_tsp$TSP, lag_tsp$nextTSP), na.rm = TRUE),
+     ylim = range(c(lag_tsp$TSP, lag_tsp$nextTSP), na.rm = TRUE),
+     pch = 16, cex = 0.5)
+abline(a = 0, b = 1, col = oi_colors[3])
+```
+## Correlation
+
+
+```{r lag_stats}
+lag_stats <- 
+  qual_box |>
+  select(Player, season, TSP, eFGP, FGP, TPP) |>
+  group_by(Player) |>
+  arrange(desc(season)) |>
+  mutate(nextTSP = lead(TSP),
+         nexteFGP = lead(eFGP),
+         nextFGP = lead(FGP),
+         nextTPP = lead(TPP)) |>
+  ungroup() |>
+  arrange(Player, season) |>
+  filter(!is.na(nextTSP))
+```
+
+```{r compute-corr}
+cor(lag_stats$eFGP, lag_stats$nexteFGP)
+cor(lag_stats$TSP, lag_stats$nextTSP)
+cor(lag_stats$TPP, lag_stats$nextTPP)
+cor(lag_stats$FGP, lag_stats$nextFGP)
+```
 
 <!--
 
