--- a/website/lectures/lecture03.qmd
+++ b/website/lectures/lecture03.qmd
@@ -14,7 +14,7 @@ By looking at a few of Beth Mead's shots from EURO 2022, we decided that the sec
 In this lecture, we will 
 
 We will continue to work with all shot event data from women's international competitions that StatsBomb makes publicly available.
-Using code from [Lecture 2](), we can load in all the shot event data and create a binary outcome recording whether the shot resulted in a goal.
+Using code from [Lecture 2](lecture02.qmd), we can load in all the shot event data and create a binary outcome recording whether the shot resulted in a goal.
 ```{r load-data}
 #| output: false
 #| message: false
@@ -65,7 +65,7 @@ In contrast, our second model, which accounts for both the body part and the sho
 Intuitively, we might expect the second model's predictions to be more accurate because it leverages more information. 
 
 To make this more concrete, suppose we have observed a shots dataset of pairs $(\boldsymbol{\mathbf{x}}_{1}, y_{1}), \ldots (\boldsymbol{\mathbf{x}}_{n}, y_{n})$ of feature vectors $\boldsymbol{\mathbf{X}}$ and binary indicators $Y$ recording whether the shot resulted in a goal or not.
-Recall from [Lecture 2]() that a key assumption of XG models is the observed dataset comprises a *sample* from some infinite super-population of shots.
+Recall from [Lecture 2](lecture2.qmd) that a key assumption of XG models is the observed dataset comprises a *sample* from some infinite super-population of shots.
 For each feature combination $\boldsymbol{\mathbf{x}},$ the corresponding $\textrm{XG}(\boldsymbol{\mathbf{x}})$ is defined to be the conditional expectation $\textrm{XG}(\boldsymbol{\mathbf{x}}) := \mathbb{E}[Y \vert \boldsymbol{\mathbf{X}} = \boldsymbol{\mathbf{x}}].$
 Because $Y$ is a binary indicator, $\textrm{XG}(\boldsymbol{\mathbf{x}})$ can be interpreted as the probability that a shot with features $\boldsymbol{\mathbf{x}}$ results in a goal.
 
