Minor tweaks for lectures1-3

--- a/website/lectures/lecture01.qmd
+++ b/website/lectures/lecture01.qmd
@@ -3,9 +3,7 @@ title: "Lecture 1: Boxscore Metrics"
 format: html
 execute: 
   cache: true
-  
-bibliography: stat479_refs.bib
-
+  freeze: auto
 ---
 
 ## Motivation: the best shooting season in the NBA?
