--- a/website/lectures/lecture02.qmd
+++ b/website/lectures/lecture02.qmd
@@ -3,6 +3,7 @@ title: "Lecture 2: Expected Goals"
 format: html
 execute: 
   cache: true
+  freeze: auto
 ---
 ## Motivation: Beth Mead's performance at EURO2022
 
